--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,117 @@
     transform: rotate(360deg);
   }
 }
+a{color: "red";}
+.page{
+  display:flex;
+  gap:5px
+}
+.ant-table-thead > tr > th {
+color: red;
+background-color: white;
+  }
+.ant-table-tbody> tr:nth-child(odd){
+    background-color: rgb(248, 245, 245);
+  }
+  .ant-pagination-item a{
+    color:brown
+  }
+  
+  .ant-pagination-item a:hover{
+    color:white;
+    background-color: brown;
+  }
+  .ant-pagination-item{
+    border: none;
+  }
+  
+  .ant-pagination-ite-ellipsis{
+    color:brown;
+  }
+  .ant-pagination-ite-ellipsis:hover{
+    color:brown;
+   }
+/*    
+  .ant-checkbox-input:hover{
+    border-color: brown;
+  } */
+  .ant-table-tbody > tr.ant-table-row-selected > td{
+    background-color:transparent;}
+   /* } 
+   
+input[type=checkbox]{
+border: 2px,solid,brown;} */
+/* 
+.ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color:black;} */
+
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color:brown;
+    color: yellow;
+    }
+    .ant-checkbox-checked .ant-checkbox-wrapper{
+      color: blueviolet;
+    }
+/*     
+    .ant-checkbox-checked .ant-checkbox-inner ::after {
+      background-color:aqua;
+      border-color: black;}
+       */
+  .ant-checkbox-checked{
+  border-color: black;}
+
+   /* 
+
+  .ant-table-row .ant-table-row-level-0 .ant-table-row-selected
+  .ant-table-cell .ant-table-selection-column
+  .ant-checkbox-wrapper .ant-checkbox-wrapper-checked
+  .ant-checkbox .ant-checkbox-checked
+  .ant-checkbox-input .ant-checkbox-inner::after{
+    background-color: black;
+
+  } */ 
+/* 
+  .ant-checkbox-wrapper .ant-checkbox-wrapper-checked{
+    color: black;
+    background-color: yellow;
+  } */ */
+/* 
+ .ant-checkbox-inner{
+   background-color:white;
+   border: 1px,solid,brown;
+ } */ */
+/*  
+.ant-table-tbody > tr.ant-table-row-selected > input[type=checkbox]{
+  background-color:blue;
+  color:bisque
+ }  */ */
+/* 
+.ant-table-tbody > tr.ant-table-row-selected > td > input{
+  background-color: white;
+  color: brown;
+} 
+.ant-checkbox-inner{
+  color: brown;
+  background-color: white;
+/* }
+ /*
+span.ant-checkbox.ant-checkbox-checked {
+  background-color: white;
+  color:brown;
+} */
+/* 
+.ant-table-row > .ant-table-row-level-0 > .ant-table-row-selected{
+  color: brown;
+  background-color: white;
+} */
+
+
+
+.ant-checkbox-inner::after{
+  border:2px,solid,brown
+}
+
+::selection{
+  color:brown;
+  background-color: white;
+}
